Java 8 compile fixes